# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 09:58:17 d3g096
# -------------------------------------------------------------

# add_subdirectory(AssocVector)
add_subdirectory(CachedFactory)
add_subdirectory(CheckReturn)
add_subdirectory(Checker)
add_subdirectory(DeletableSingleton)
add_subdirectory(Factory)
add_subdirectory(Function)
# add_subdirectory(LevelMutex)
add_subdirectory(Lockable)
add_subdirectory(LockingPtr)
add_subdirectory(Longevity)
add_subdirectory(OrderedStatic)
add_subdirectory(Pimpl)
add_subdirectory(Register)
# add_subdirectory(RegressionTest)
add_subdirectory(SafeBits)
add_subdirectory(SafeFormat)
add_subdirectory(ScopeGuard)
add_subdirectory(Singleton)
add_subdirectory(SingletonDll)
add_subdirectory(SmallObj)
add_subdirectory(SmartAssert)
add_subdirectory(SmartPtr)
# add_subdirectory(ThreadLocal)
add_subdirectory(Visitor)
# add_subdirectory(flex_string)
