# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 08:33:36 d3g096
# -------------------------------------------------------------

add_executable(CachedFactoryTest CachedFactoryTest.cpp)
target_link_libraries(CachedFactoryTest loki)
