# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 08:38:32 d3g096
# -------------------------------------------------------------

add_executable(CheckerTest main.cpp)
target_link_libraries(CheckerTest loki)
