# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 08:39:35 d3g096
# -------------------------------------------------------------

add_executable(DeletableSingletonTest DeletableSingleton.cpp)
target_link_libraries(DeletableSingletonTest loki)
