# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 08:41:00 d3g096
# -------------------------------------------------------------

add_executable(FactoryTest Factory.cpp)
target_link_libraries(FactoryTest loki)
