# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 08:47:37 d3g096
# -------------------------------------------------------------

add_executable(LockingPtrTest main.cpp)
target_link_libraries(LockingPtrTest loki)
