# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 09:00:41 d3g096
# -------------------------------------------------------------

add_executable(RegressionTest Test.cpp)
target_link_libraries(RegressionTest loki)
