# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 09:29:49 d3g096
# -------------------------------------------------------------

add_executable(SmartAssertTest main.cpp)
target_link_libraries(SmartAssertTest loki)
