# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 09:33:11 d3g096
# -------------------------------------------------------------

add_executable(VisitorTest main.cpp)
target_link_libraries(VisitorTest loki)
