# -------------------------------------------------------------
# file: CMakeLists.txt
# -------------------------------------------------------------
# -------------------------------------------------------------
# Created October 11, 2017 by Perkins
# Last Change: 2017-10-11 09:33:58 d3g096
# -------------------------------------------------------------

add_executable(FlexStringTest main.cpp)
target_link_libraries(FlexStringTest loki)
